<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_movies">Tampilan Movies</string>
    <string name="content_tab_tv_show">Tampilan Tv Show</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Show</string>
    <string name="tab_text_3">Favorite</string>
    <string name="item_name">Title</string>
    <string name="item_description">Description</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="poster_movie">Image Film</string>
    <string name="trailer">Trailer</string>
    <string name="settings">Settings</string>
    <string name="img_year">Tahun Release</string>
    <string name="img_rating">Bintang</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_welcome">Your Favorite Movies</string>
    <string name="favorite_tv_show">Favorite Tv Show</string>
    <string name="toastFav">Successfully added to favorites</string>
    <string name="toastFavFail">Failed to add to favorites</string>
    <string name="toastDel">Successful delete</string>
    <string name="back">back</string>
    <string name="search">Search</string>
    <string name="language_settings">Language settings</string>
    <string name="daily_reminder">Set daily reminder</string>
    <string name="release_today">Set release reminder</string>
    <string name="change_language">Change language</string>
    <string name="message_daily_remind">"watchout, Ad Astra is waiting for you today "</string>
    <string name="message_release_remind">Hei, New Movies Has Release Today, Check and Watch it.</string>
    <string name="set_daily_remind">Dayli reminder is set</string>
    <string name="cancel_daily_remind">Dayli reminder is disable</string>
    <string name="set_release_remind">Release reminder is set</string>
    <string name="cancel_release_remind">Release reminder is disable</string>

</resources>
