<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.MoviesDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            tools:ignore="MissingConstraints"
            android:translationZ="2dp" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="50dp"
            android:text="@string/item_name"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            app:layout_constraintStart_toEndOf="@+id/detail_photo"
            app:layout_constraintTop_toTopOf="@+id/board_img" />

        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_marginBottom="8dp"
            android:alpha="0.7"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/poster_movie"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorPrimary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/detail_name"
            app:layout_constraintEnd_toEndOf="@+id/board_img" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_delete_black_24dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/detail_name"
            app:layout_constraintEnd_toEndOf="@+id/board_img" />

        <ImageView
            android:id="@+id/board_img"
            android:layout_width="370dp"
            android:layout_height="320dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/roundedcorner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detail_poster"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/detail_photo"
            android:layout_width="157dp"
            android:layout_height="215dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/roundedcorner"
            android:baselineAligned="false"
            android:contentDescription="@string/poster_movie"
            app:layout_constraintStart_toStartOf="@+id/board_img"
            app:layout_constraintTop_toTopOf="@+id/detail_poster"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/img_year"
            android:padding="6dp"
            android:src="@drawable/ic_today_black_18dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/board_img"
            app:layout_constraintHorizontal_bias="0.021"
            app:layout_constraintStart_toEndOf="@+id/detail_photo"
            app:layout_constraintTop_toBottomOf="@+id/detail_name" />

        <TextView
            android:id="@+id/detail_release"
            android:layout_width="37dp"
            android:layout_height="40dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:paddingTop="7dp"
            android:text="@string/year"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            app:layout_constraintEnd_toEndOf="@+id/board_img"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/detail_name" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/img_rating"
            android:padding="6dp"
            android:src="@drawable/ic_stars_black_18dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/board_img"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/detail_release"
            app:layout_constraintTop_toBottomOf="@+id/detail_name" />

        <TextView
            android:id="@+id/detail_rating"
            android:layout_width="37dp"
            android:layout_height="30dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="3dp"
            android:paddingTop="7dp"
            android:text="@string/rating"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            app:layout_constraintEnd_toEndOf="@+id/board_img"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/detail_name" />

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/trailer"
            app:layout_constraintBottom_toBottomOf="@+id/board_img"
            app:layout_constraintEnd_toEndOf="@+id/board_img"
            app:layout_constraintStart_toStartOf="@+id/board_img"
            app:layout_constraintVertical_bias="0.871"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:text="@string/item_description"
            android:textColor="@color/colorText"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/board_img" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/item_description"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/board_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_title" />

        <ProgressBar
            android:id="@+id/progressBar_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/board_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detail_poster" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>