<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:orientation="horizontal"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorDefault"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item"
            android:layout_width="110dp"
            android:layout_height="145dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_item"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/item_name" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxLines="3"
                tools:text="@string/item_description" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_item"
            android:orientation="vertical"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/row_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:src="@drawable/ic_today_black_18dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_item_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="7dp"
                    android:text="@string/year"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:src="@drawable/ic_stars_black_18dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_item_rating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="7dp"
                    android:text="@string/rating"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </TableRow>
        </TableLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>